crates/config/src/snapshots/config__patch__tests__a_patch_writes_only_the_fields_it_sets@empty_patch.snap
---
source: crates/config/src/config_document.rs
expression: out
---
# sifr config
music_dir = "/music" # where my library lives
theme = "auto"
volume = 50

[audio]
# gapless by default; bump this for a crossfade
crossfade = "0s"
replay_gain = false
sleep_presets = [15, 30, 60]
