crates/config/src/snapshots/config__patch__tests__a_patch_writes_only_the_fields_it_sets@every_field.snap
---
source: crates/config/src/config_document.rs
expression: out
---
theme = "oreo"
volume = 80
music_dir = "/new/music"

[audio]
crossfade = "250ms"
replaygain = true
device = "Speakers"
sleep_presets = [10, 20]
