crates/config/src/snapshots/config__patch__tests__an_appearance_patch_writes_only_the_fields_it_sets@animations_on.snap
---
source: crates/config/src/appearance_document.rs
expression: out
---
[window]
animations = true
