crates/config/src/snapshots/config__patch__tests__an_appearance_patch_writes_only_the_fields_it_sets@empty_patch.snap
---
source: crates/config/src/appearance_document.rs
expression: out
---
# sifr-ui.toml
[cover]
# the noir look
mode = "vinyl"
brackets = false

[card]
format_chips = true
speed_chip = "always"
