crates/config/src/snapshots/config__patch__tests__an_appearance_patch_writes_only_the_fields_it_sets@every_field_text.snap
---
source: crates/config/src/appearance_document.rs
expression: out
---
# zefiro-ui.toml
[cover]
# the noir look
mode = "milkdrop"
brackets = true

[card]
format_chips = true
speed_chip = "always"

[progress]
remaining = true

[window]
key_hints = false
animations = false

[layout]
mode = "compact"
