crates/config/src/snapshots/config__patch__tests__an_appearance_patch_writes_only_the_fields_it_sets@minimal_sections.snap
---
source: crates/config/src/appearance_document.rs
expression: out
---
[cover]
mode = "off"

[card]
format_chips = true
